[package]
authors = ["Overlay NAPI Team"]
edition = "2021"
name    = "overlay-napi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
winit       = "0.28"
pixels      = "0.12"
raw-window-handle = "0.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
