[package]
authors = ["Overlay NAPI Team"]
edition = "2021"
name    = "overlay-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
image             = "0.24"
napi              = "3.0.0"
napi-derive       = "3.0.0"
pixels            = "0.15"
raw-window-handle = "0.6"
winit             = { version = "0.30", features = ["rwh_06"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
