[package]
authors = ["Overlay NAPI Team"]
edition = "2021"
name    = "overlay-napi"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi              = "3.0.0"
napi-derive       = "3.0.0"
pixels            = "0.15"
raw-window-handle = "0.6"
winit             = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dwm",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
